--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,50 @@
             <artifactId>jackson-mapper-asl</artifactId>
             <version>${jackson-mapper.version}</version>
         </dependency>
+		<dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        <dependency>
+		    <groupId>eu.bitwalker</groupId>
+		    <artifactId>UserAgentUtils</artifactId>
+		    <version>1.20</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/cz.mallat.uasparser/uasparser -->
+		<dependency>
+		    <groupId>cz.mallat.uasparser</groupId>
+		    <artifactId>uasparser</artifactId>
+		    <version>0.6.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.sourceforge.jregex/jregex -->
+		<dependency>
+		    <groupId>net.sourceforge.jregex</groupId>
+		    <artifactId>jregex</artifactId>
+		    <version>1.2_01</version>
+		</dependency>
+		
     </dependencies>
 
     <build>
