--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,9 +26,9 @@ spring.datasource.dbcp2.connection-properties=characterEncoding=utf8
 
 # Database
 spring.datasource.driver: com.mysql.jdbc.Driver
-spring.datasource.url: jdbc:mysql://localhost/develop?autoReconnect\=true&useUnicode\=true&characterEncoding\=UTF-8&useSSL=false
+spring.datasource.url: jdbc:mysql://10.40.10.150\:10000/ztest?autoReconnect\=true&useUnicode\=true&characterEncoding\=UTF-8&useSSL=false
 spring.datasource.username: root
-spring.datasource.password: root
+spring.datasource.password: chengce243
 
 # Hibernate
 spring.hibernate.dialect: org.hibernate.dialect.MySQL5Dialect
